2020-03-26  Araki Ken  <arakiken@users.sf.net>

	* vt_term.c: Missing '}' is fixed.

	* vt_parser.[ch]: The return value of vt_parser_write() is changed from
	  int to size_t.

	* ui_display_linux.c: Compiling error in no KT_DEAD2 macro definition is fixed.

	* c_sixel.c: SIXEL_ORMODE is defined.

2020-03-15  Araki Ken  <arakiken@users.sf.net>

	* win32/ui.h, win32/ui_xic.c: XK_Prior - XK_Help and XK_KP_0 = VK_XXX + 0xff00.

	* vt_parser.c: alloca(10) -> buf[10]

	* ui_screen.c, MLTrem.java: If ksym is 0, vt_term_write_modified_key()
	  is not called.

2020-03-14  Araki Ken  <arakiken@users.sf.net>

	* ui_draw_str.c: If CLIP_LINE is defined and top_margin < 0,
	  ui_draw_str() and ui_draw_str_to_eol() calls cairo_{set|unser}_clip().

	* libtype/ui_window_cairo.c: cairo_{set|unset}_clip() calls flush_glyphs()
	  in order to apply clipping region.

2020-03-08  Araki Ken  <arakiken@users.sf.net>

	* fb/ui.h: Compiling error on FreeBSD is fixed.

2020-03-07  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* fb/ui_window.c:
	  - ui_window_get_str() supports unicode on FreeBSD.
	  - ModMask is cleared if keyboard input is unicode.

	* ui_display_linux.c:
	  - The type of diacrs_uc and diacrs is changed to pointer.
	  - load_diacr() is integrated to get_accented_char().
	  - ModMask is not cleared if kb_value doesn't change in either
	    kb_table = K_ALTTAB or kb_table = 0.

	* ui_display_freebsd.c: Dead key is processed to input accented characters
	  etc from keyboard.

2020-03-04  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* ui_display_wscons.c: Dead key is processed to input accented characters
	  etc from keyboard.

	* wskbdutil.c: Added.

2020-03-01  Araki Ken  <arakiken@users.sf.net>

	* ef_ucs_property.table: Updated to Unicode 12.1.0 (UnicodeData.txt and
	  EastAsianWidth.txt)

	* config.sub, config.guess: Updated.

2020-03-01  Araki Ken  <arakiken@users.sf.net>
